<resources>
    <string name="app_name">Colombo Pizzarian</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="_45_min">45 Min</string>
    <string name="product_name">Product Name</string>
    <string name="_5_0">5.0</string>
    <string name="_10_00_2_00">10.00-2.00</string>
    <string name="min_45">Min-45</string>
    <string name="pavithra_madushani">Pavithra Madushani</string>
    <string name="enjoy_the_best_pizza_flavours_around_colombo">Enjoy the Best pizza flavours around colombo</string>
    <string name="food_menu">Food Menu</string>
    <string name="my_cart">My Cart</string>
    <string name="help_and_support">Help and Support</string>
    <string name="view_orders">View Orders</string>
    <string name="promotions">Promotions</string>
    <string name="logoutuserAccount">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Logout</string>
    <string name="logout_from_account">logout from Account</string>
    <string name="sign_in">sign_in</string>
    <string name="colombo_pizza_app">colombo_pizza_app</string>
    <string name="registration">Registration</string>
    <string name="colombo_pizzarian">Colombo Pizzarian</string>
</resources>