<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_baseline_fastfood_24"
            android:title="@string/food_menu" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/my_cart" />
        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/ic_baseline_support_24"
            android:title="@string/help_and_support" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_baseline_event_note_24"
            android:title="@string/view_orders" />
        <item
            android:id="@+id/nav_promotions"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/promotions" />
    `    <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/logout" />
    </group>
</menu>