<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.colombopizzarian.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.example.colombopizzarian.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.colombopizzarian.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_promotions"
        android:name="com.example.colombopizzarian.PromotionFragment"
        android:label="fragment_promotion"
        tools:layout="@layout/fragment_promotion" />
    <fragment
        android:id="@+id/nav_contactus"
        android:name="com.example.colombopizzarian.SupportFragment"
        android:label="fragment_support"
        tools:layout="@layout/fragment_support" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.colombopizzarian.AppFragment"
        android:label="fragment_app"
        tools:layout="@layout/fragment_app" />
    <fragment
        android:id="@+id/nav_order"
        android:name="com.example.colombopizzarian.ViewOrderFragment"
        android:label="fragment_view_order"
        tools:layout="@layout/fragment_view_order" />
    <fragment
        android:id="@+id/nav_app"
        android:name="com.example.colombopizzarian.OrderFragment"
        android:label="fragment_order"
        tools:layout="@layout/fragment_order" />
    <fragment
        android:id="@+id/nav_exit"
        android:name="com.example.colombopizzarian.BlankFragment"
        android:label="fragment_blank"
        tools:layout="@layout/fragment_blank" >
        <action
            android:id="@+id/action_nav_exit_to_nav_app"
            app:destination="@id/nav_app" />
    </fragment>

</navigation>